feat: setup backend

--- a/package.json
+++ b/package.json
@@ -2,14 +2,29 @@
   "name": "@secure-task-management-system/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "api:build": "nx build api",
+    "api:serve": "nx serve api",
+    "api:dev": "nx serve api --watch",
+    "lint": "eslint \"{packages,libs}/**/*.{js,ts}\" --fix",
+    "lint:check": "eslint \"{packages,libs}/**/*.{js,ts}\"",
+    "format": "prettier --write \"{packages,libs}/**/*.{js,ts,json,md}\"",
+    "format:check": "prettier --check \"{packages,libs}/**/*.{js,ts,json,md}\""
+  },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@nestjs/common": "^10.4.15",
+    "@nestjs/core": "^10.4.15",
+    "@nestjs/platform-express": "^10.4.15",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.1"
+  },
   "devDependencies": {
     "@nx/js": "21.3.11",
-    "@swc-node/register": "~1.9.1",
-    "@swc/core": "~1.5.7",
-    "@swc/helpers": "~0.5.11",
+    "@types/node": "^22.10.6",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.57.1",
     "nx": "21.3.11",
     "prettier": "^2.6.2",
     "tslib": "^2.3.0",
