--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint \"{packages,libs}/**/*.{js,ts}\" --fix",
     "lint:check": "eslint \"{packages,libs}/**/*.{js,ts}\"",
     "format": "prettier --write \"{packages,libs}/**/*.{js,ts,json,md}\"",
-    "format:check": "prettier --check \"{packages,libs}/**/*.{js,ts,json,md}\""
+    "format:check": "prettier --check \"{packages,libs}/**/*.{js,ts,json,md}\"",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "private": true,
   "dependencies": {
@@ -20,13 +23,17 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@nestjs/testing": "^10.4.15",
     "@nx/js": "21.3.11",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.10.6",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.57.1",
+    "jest": "^29.7.0",
     "nx": "21.3.11",
     "prettier": "^2.6.2",
+    "ts-jest": "^29.2.5",
     "tslib": "^2.3.0",
     "typescript": "~5.8.2"
   },
