--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,13 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "es2022",
-    "customConditions": ["development"]
+    "customConditions": ["development"],
+    "baseUrl": ".",
+    "paths": {
+      "@data": ["libs/data/src/index.ts"],
+      "@data/*": ["libs/data/src/lib/*"],
+      "@auth": ["libs/auth/src/index.ts"],
+      "@auth/*": ["libs/auth/src/lib/*"]
+    }
   }
 }
