feat: move api to the root folder

--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -1,15 +1,15 @@
 {
   "name": "api",
   "projectType": "application",
-  "sourceRoot": "packages/apps/api/src",
+  "sourceRoot": "apps/api/src",
   "targets": {
     "build": {
       "executor": "@nx/js:tsc",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/packages/apps/api",
-        "main": "packages/apps/api/src/main.ts",
-        "tsConfig": "packages/apps/api/tsconfig.app.json",
+        "outputPath": "dist/apps/api",
+        "main": "apps/api/src/main.ts",
+        "tsConfig": "apps/api/tsconfig.app.json",
         "assets": []
       }
     },
