--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,22 +1,18 @@
 {
+  "compileOnSave": false,
   "compilerOptions": {
-    "composite": true,
-    "declarationMap": true,
-    "emitDeclarationOnly": true,
+    "rootDir": ".",
+    "sourceMap": true,
+    "declaration": false,
+    "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "importHelpers": true,
-    "isolatedModules": true,
-    "lib": ["es2022"],
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
-    "noEmitOnError": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitOverride": true,
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
+    "target": "es2021",
+    "module": "esnext",
+    "lib": ["es2020", "dom"],
     "skipLibCheck": true,
-    "strict": true,
-    "target": "es2022",
-    "customConditions": ["development"],
+    "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
       "@data": ["libs/data/src/index.ts"],
@@ -24,5 +20,6 @@
       "@auth": ["libs/auth/src/index.ts"],
       "@auth/*": ["libs/auth/src/lib/*"]
     }
-  }
+  },
+  "exclude": ["node_modules", "tmp"]
 }
