--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,9 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@data": ["libs/data/src/index.ts"],
-      "@data/*": ["libs/data/src/lib/*"],
-      "@auth": ["libs/auth/src/index.ts"],
-      "@auth/*": ["libs/auth/src/lib/*"]
+      "@auth": ["libs/auth/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
