--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -4,13 +4,11 @@
   "sourceRoot": "apps/api/src",
   "targets": {
     "build": {
-      "executor": "@nx/js:tsc",
+      "executor": "@nx/webpack:webpack",
       "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/api",
-        "main": "apps/api/src/main.ts",
-        "tsConfig": "apps/api/tsconfig.app.json",
-        "assets": []
+        "webpackConfig": "apps/api/webpack.config.js"
       }
     },
     "serve": {
