--- a/apps/api/tsconfig.app.json
+++ b/apps/api/tsconfig.app.json
@@ -1,16 +1,11 @@
 {
-  "extends": "../../../tsconfig.base.json",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "../../../dist/packages/apps/api",
+    "outDir": "../../dist/out-tsc",
+    "module": "commonjs",
     "types": ["node"],
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "skipLibCheck": true,
-    "noEmitOnError": false,
-    "noUnusedLocals": false,
-    "emitDeclarationOnly": false,
-    "composite": false,
-    "declaration": true
+    "target": "es2021"
   },
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"],
   "include": ["src/**/*.ts"]
