--- a/package.json
+++ b/package.json
@@ -70,12 +70,15 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@typescript-eslint/utils": "^7.16.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.57.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.1.0",
     "nx": "21.3.11",
+    "postcss": "^8.5.6",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.4.17",
     "ts-jest": "^29.2.5",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
