feat: fix proper configs

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@types/node": "^22.10.6",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@typescript-eslint/utils": "^7.16.0",
@@ -79,6 +80,7 @@
     "nx": "21.3.11",
     "postcss": "^8.5.6",
     "prettier": "^2.6.2",
+    "supertest": "^7.1.4",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.2.5",
     "ts-node": "10.9.1",
