--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -17,6 +17,13 @@
         "buildTarget": "api:build",
         "inspect": false
       }
+    },
+    "test": {
+      "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "options": {
+        "jestConfig": "apps/api/jest.config.ts"
+      }
     }
   }
 }
