--- a/libs/auth/tsconfig.spec.json
+++ b/libs/auth/tsconfig.spec.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "module": "nodenext",
+    "module": "commonjs",
     "types": ["jest", "node"]
   },
   "include": [
